--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,5 +58,8 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.autoSave": "afterDelay",
   "editor.mouseWheelZoom": true,
-  "editor.formatOnType": true
+  "editor.formatOnType": true,
+  "files.associations": {
+    "iostream": "cpp"
+  }
 }
